# review-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
review-main/: AGENTS.md  review.html  review.md  summary.md
review-main/files/src/: cli.rs  main.rs  pack.rs
review-main/patches/src/: cli.rs.patch  main.rs.patch  pack.rs.patch
scripts/: check.sh  review-branch.sh
src/: cli.rs  html.rs  main.rs  ollama.rs  pack.rs  review-branch.sh  review.rs
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
templates/agents/: angular.md  rust.md
templates/html/: review.html
tests/: agents-templates.test.sh  edge-cases.test.sh  error-handling.test.sh  git-diff-and-generation.test.sh  git-diff-and-generation.test.sh.skip  helpers.sh  review-branch.test.sh  run.sh
