[package]
name = "review-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.17"
open = "5"
pulldown-cmark = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
zip = "2"

[dev-dependencies]
tempfile = "3"
